--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -8,7 +8,7 @@
 
   &__content {
     width: 90%;
-    max-width: 64rem;
+    max-width: 65rem;
     margin: auto;
     text-align: center;
     font-size: 20px;
