--- a/src/components/Header.tsx/styles.module.scss
+++ b/src/components/Header.tsx/styles.module.scss
@@ -8,7 +8,7 @@
   .navbar {
     width: 90%;
     margin: auto;
-    max-width: 64rem;
+    max-width: 65rem;
     display: flex;
     justify-content: space-between;
 
