--- a/src/components/Main/styles.module.scss
+++ b/src/components/Main/styles.module.scss
@@ -1,7 +1,7 @@
 .main {
   min-height: 75vh;
   width: 90%;
-  max-width: 64rem;
+  max-width: 85rem;
   margin: auto;
   padding: 25px 0;
   display: flex;
